--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -341,6 +341,13 @@ on post-fs-data
     mkdir /data/fota 0771
     chown system system /data/fota
 
+    # SSC/SLPI sensors
+    mkdir /persist/sensors 0775 sensors sensors
+    mkdir /persist/sensors/registry 0775 sensors sensors
+    mkdir /persist/sensors/registry/registry 0775 sensors sensors
+    chown system root /persist/sensors/sensors_settings
+    chmod 0664 /persist/sensors/sensors_settings
+
     #Create directory for hostapd
     mkdir /data/hostapd 0770 system wifi
 
@@ -634,7 +641,6 @@ service sensors /vendor/bin/sensors.qcom
     class core
     user root
     group root
-    disabled
 
 on property:ro.use_data_netmgrd=false
     # netmgr not supported on specific target
@@ -792,11 +798,6 @@ on property:drmdiag.load=0
 
 service qcom-sh /vendor/bin/init.qcom.sh
     class late_start
-    user root
-    oneshot
-
-service sensor-sh /vendor/bin/init.qcom.sensors.sh
-    class core
     user root
     oneshot
 
