--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -53,7 +53,7 @@ on init
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
-    mount_all /vendor/etc/fstab.qcom
+    mount_all /vendor/etc/fstab.qcom --early
     swapon_all /vendor/etc/fstab.qcom
 
     # Keeping following partitions outside fstab file. As user may not have
@@ -73,13 +73,35 @@ on fs
     restorecon_recursive /persist
     write /sys/kernel/boot_adsp/boot 1
 
-on post-fs
+    # Start HW service manager early
+    start hwservicemanager
+
+    # Start qseecomd early
+    # vold needs keymaster which needs qseecomd
     start qseecomd
-    exec - system system -- /vendor/bin/init.qti.qseecomd.sh
+
+on late-fs
+    # Start devices by sysfs trigger
+    write /sys/kernel/boot_adsp/boot 1
+    write /sys/kernel/boot_slpi/boot 1
+    write /sys/kernel/boot_slpi/boot 1
+
+    # Start services for bootanim
+    start surfaceflinger
+    start bootanim
+    start hwcomposer-2-1
+    start configstore-hal-1-0
+    start gralloc-2-0
+
+    mount_all /vendor/etc/fstab.qcom --late
+
+ on post-fs
     write /dev/ipa 1
 
     # Update dm-verity state and set partition.*.verified properties
     verity_update_state
+
+    wait_for_prop sys.listeners.registered true
 
 on init
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
