clover: Use prebuilt kernel from MIUI 8.9.20 for now
 * Use whyred kernel for generating kernel header at the build time.

Change-Id: I6aba6df5be9935936b8ad6a87abb9ff93394b9dc

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -146,8 +146,11 @@ on boot
     chmod 0664 /sys/class/graphics/fb0/idle_time
 
 #Load WLAN driver
-   insmod /vendor/lib/modules/qca_cld3/qca_cld3_wlan.ko
+   insmod /system/lib/modules/qca_cld3_wlan.ko
    setprop wlan.driver.status "ok"
+
+on property:wlan.driver.status=ok
+    chown wifi wifi /sys/module/wlan/parameters/fwpath
 
 # Set max charge current depends on in-call state
 on property:sys.incall=true
