--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -840,14 +840,14 @@ service atfwd /vendor/bin/ATFWD-daemon
 on property:persist.radio.atfwd.start=true
     start atfwd
 
-service hostapd_fst /vendor/bin/hostapd -dd -g /data/vendor/wifi/hostapd/global /data/misc/wifi/hostapd.conf
+service hostapd_fst /vendor/bin/hostapd -g /data/vendor/wifi/hostapd/global /data/misc/wifi/hostapd.conf
     class late_start
     user wifi
     group wifi inet keystore net_admin net_raw
     oneshot
     disabled
 
-service vendor.wigig_hostapd /vendor/bin/hostapd -dd /data/vendor/wifi/wigig_hostapd.conf
+service vendor.wigig_hostapd /vendor/bin/hostapd /data/vendor/wifi/wigig_hostapd.conf
     class late_start
     user wifi
     group wifi inet keystore net_admin net_raw
