--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -219,6 +219,9 @@ on boot
     # load WIGIG platform driver
     insmod /vendor/lib/modules/msm_11ad_proxy.ko
 
+    # Create hvdcp_opti directory
+    mkdir /persist/hvdcp_opti 0770 root system
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
@@ -337,6 +340,9 @@ on post-fs-data
     mkdir /data/vendor/location 0770 gps gps
     mkdir /data/vendor/location/mq 0770 gps gps
     mkdir /data/vendor/location/xtwifi 0770 gps gps
+    mkdir /dev/socket/location 0770 gps gps
+    mkdir /dev/socket/location/mq 0770 gps gps
+    mkdir /dev/socket/location/xtra 0770 gps gps
 
     #Create directory from IMS services
     mkdir /data/shared 0755
@@ -361,7 +367,7 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
     #Create a folder for SRS to be able to create a usercfg file
-    mkdir /data/data/media 0770 media media
+    #mkdir /data/data/media 0770 media media
 
     #Create FM dir for patchdownloader
     mkdir /data/misc/fm 0770 system system
@@ -802,28 +808,18 @@ service iprenew_wigig0 /system/bin/dhcpcd -n
     class late_start
     disabled
     oneshot
-    
-#vendor\qcom\proprietary\wlan\utils\ptt\pttSocketApp.c
-#-d:nodaemon. if use -d, will not run with Daemonize
-#-f:ffbm mode.
-#use disabled:if service start with bootup, aniAsfIpc.c IPC will Bind failed,because Address already use. this is not same to C6?
-service ptt_socket_app /system/vendor/bin/ptt_socket_app -d -v -f 
+
+service ptt_socket_app /system/vendor/bin/ptt_socket_app -f -d
     class main
     user root
     group root
     oneshot
 
-service ptt_ffbm /system/vendor/bin/ptt_socket_app -f -d -v
+service ptt_ffbm /system/vendor/bin/ptt_socket_app -f -d
     user root
     group root
     disabled
     oneshot
-
-on property:sys.hqftm.load.wifidr=true
-    start ptt_socket_app
-
-on property:sys.hqftm.load.wifidr=false
-    stop ptt_socket_app
 
 service wifi_ftmd /system/vendor/bin/wifi_ftmd
     user system
@@ -848,7 +844,7 @@ service cnss-daemon /system/vendor/bin/cnss-daemon -n -l
     group system inet net_admin wifi
     capabilities NET_ADMIN
 
-on property:sys.shutdown.requested=*
+on property:sys.powerctl=*
     stop cnss-daemon
 
 service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
