clover: Steal readmac from xiaomi_msm8998-common
The last commit is:

  commit 57e1b476b0eb55b1c0d3aef1630cb7ce4f9db70a
  Author: Demon Singur <demonsingur@gmail.com>
  Date:   Mon Aug 6 04:09:35 2018 +0000

      Revert "msm8998-common: readmac: add support for reading bluetooth mac"

      Keep the rewrite, but remove the bluetooth mac reading functionality.

      Reverts commit cc01d0da74e97f8a2af17822e1f4fe38dd440055.

      Change-Id: Ia2e2608758a04f1d63eaffe730676e412b599c2e

Change-Id: If36ae902ba886907424240a7ca6e95bac2387348

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -493,3 +493,8 @@ service smcinvoked /system/bin/smcinvoked
    user system
    group system
 
+service readmac /vendor/bin/readmac
+    class main
+    user root
+    group oem_2901
+    oneshot
