--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -495,6 +495,6 @@ service smcinvoked /system/bin/smcinvoked
 
 service readmac /vendor/bin/readmac
     class main
-    user root
-    group oem_2901
+    user system
+    group system net_raw
     oneshot
