--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -3,7 +3,7 @@
 
 # Enable IMPS or not
 gEnableImps=1
-
+gEnableLPRx=0
 # Enable BMPS or not
 gEnableBmps=1
 
@@ -28,6 +28,11 @@ InfraUapsdBkSrvIntv=0
 
 # Flag to allow STA send AddTspec even when ACM is Off
 gAddTSWhenACMIsOff=1
+
+# Flags to filter Mcast and Bcast RX packets.
+# Value 0: No filtering, 1: Filter all Multicast.
+# 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
+McastBcastFilter=3
 
 #Flag to enable HostARPOffload feature or not
 hostArpOffload=1
@@ -54,10 +59,7 @@ gFixedRate=0
 # gFragmentationThreshold=2346
 
 # RTS threshold
-RTSThreshold=2346
-
-# CTS2SELF_ENABLED_4_SWRETRIES
-gEnableRTSProfiles=34
+RTSThreshold=1048576
 
 # Intra-BSS forward
 gDisableIntraBssFwd=0
@@ -75,10 +77,11 @@ g11hSupportEnabled=1
 gEnableDFSMasterCap=1
 
 # ESE Support and fast transition
-EseEnabled=0
+EseEnabled=1
 
 ImplicitQosIsEnabled=0
 
+gNeighborScanTimerPeriod=200
 gNeighborLookupThreshold=76
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
@@ -93,19 +96,11 @@ FastRoamEnabled=1
 # terms of RSSI.  Checking is disabled if set to Zero.Otherwise it will
 # use this value as to how better the RSSI of the new/roamable AP should
 # be for roaming
-RoamRssiDiff=5
+RoamRssiDiff=3
 
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
-# Sets RSSI preference for 5GHz over 2.4GHz AP
-gSelect5GHzMargin=5
-
-# RSSI threshold offset for 2G to 5G roam
-roam_bad_rssi_thresh_offset_2g=0
-
-#RSSI threshold for background roam
-roam_bg_scan_bad_rssi_thresh=-76
 
 #Short Guard Interval Enable/disable
 gShortGI20Mhz=1
@@ -151,9 +146,6 @@ gChannelBondingMode5GHz=1
 gGoKeepAlivePeriod = 20
 gApKeepAlivePeriod = 20
 
-#Enable Keep alive with non-zero period value
-gStaKeepAlivePeriod = 30
-
 #If set will start with active scan after driver load, otherwise will start with
 #passive scan to find out the domain
 gEnableBypass11d=1
@@ -194,7 +186,7 @@ gEnableMCCMode=1
 # 3-Force SCC if same band, without SAP restart by sending (E)CSA
 # 4-Force SCC if same band (or) use SAP mandatory channel for DBS,
 #   without SAP restart by sending (E)CSA
-gWlanMccToSccSwitchMode = 3
+gWlanMccToSccSwitchMode = 0
 
 # 1=enable STBC; 0=disable STBC
 gEnableRXSTBC=1
@@ -218,6 +210,9 @@ gEnableTxBFin20MHz=1
 
 #Enable/Disable SU Tx beamformer support.
 gEnableTxSUBeamformer=1
+
+#Enable thermal mitigation
+gThermalMitigationEnable=0
 
 gEnableFastRoamInConcurrency=1
 
@@ -301,11 +296,7 @@ gMaxConcurrentActiveSessions=3
 
 # Disable/Enable GreenAP
 # 0 to disable, 1 to enable, default: 1
-gEnableGreenAp=1
-
-# Disable/Enbale Enhanced Green AP
-# 0 to disable, 1 to enable, default: 0
-gEnableEGAP=1
+gEnableGreenAp=0
 
 # Radar PRI multiplier
 gDFSradarMappingPriMultiplier=4
@@ -435,20 +426,16 @@ LROEnable=1
 # 4 for 2 micro sec
 ght_mpdu_density=4
 
+# set modulated DTIM interval
+gEnableModulatedDTIM=3
+gMaxLIModulatedDTIM=3
+
 # Enable flow steering to enable multiple CEs for Rx flows.
 # Multiple Rx CEs<==>Multiple Rx IRQs<==>probably different CPUs.
 # Parallel Rx paths.
 # 1 - enable 0 - disable(default)
 gEnableFlowSteering=1
 
-# Time in microseconds after which a NAPI poll must yield
-ce_service_max_yield_time=500
-
-#Maximum number of HTT messages to be processed per NAPI poll
-ce_service_max_rx_ind_flush=1
-
-# Maximum number of MSDUs the firmware will pack in one HTT_T2H_MSG_TYPE_RX_IN_ORD_PADDR_IND
-maxMSDUsPerRxInd=8
 ################ Datapath feature set End ################
 
 ################ NAN feature set start ###################
@@ -456,7 +443,6 @@ maxMSDUsPerRxInd=8
 # Enable NAN discovery (NAN 1.0)
 # 1 - enable  0 - disable(default)
 gEnableNanSupport=1
-genable_nan_datapath=1
 ################ NAN feature set end #####################
 
 #Action OUIs for 1x1 connection
@@ -468,94 +454,6 @@ gActionOUIConnect1x1=000C43 00 25 42 001018 06 02FFF02C0000 BC 25 42 001018 06 0
 #Please do not remove the default values, append new OUIs in the end
 #Default=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01
 gActionOUIITOExtension=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01
-
-adaptive_dwell_mode_enabled=1
-
-hostscan_adaptive_dwell_mode=1
-
-adapt_dwell_lpf_weight=80
-
-adapt_dwell_wifi_act_threshold=10
-
-# Enable pkt log
-# 1 - enable, 0 - disable
-gEnablePacketLog=1
-
-# Force 1x1 for 2.4g SAP, P2P-GC/GO, 2x2 for STA
-# gVdevTypeNss_2g=21846
-
-# 0: Disable BPF packet filter
-# 1: Enable BPF packet filter
-gBpfFilterEnable=1
-
-# 0: Disable force 1x1 on MTK solution AP
-# 1: Enable force 1x1 on MTK solution AP
-# gForce1x1Exception=1
-
-# set modulated DTIM interval
-gEnableModulatedDTIM=3
-gMaxLIModulatedDTIM=3
-
-# groam_dense_rssi_thresh_offset - Sets dense roam RSSI threshold diff
-groam_dense_rssi_thresh_offset=5
-
-# Dense traffic threshold in kBps
-gtraffic_threshold=50
-
-# Set beacon missed count threshold
-# if beacon missed counter > gRoamBmissFirstBcnt+gRoamBmissFinalBcnt,
-# heartbeat error triggered
-gRoamBmissFirstBcnt=10
-gRoamBmissFinalBcnt=20
-
-# To enabled/disable PER based roaming in FW
-# 0: disabled
-# 1: enabled for Rx traffic
-# 2: enabled for Tx traffic
-# 3: enabled for Tx and Rx traffic
-gper_roam_enabled=3
-
-# arp_ac_category - ARP access category
-# Firmware by default categorizes ARP packets with VOICE TID.
-# WME_AC_BE = 0 (Best effort)
-# WME_AC_BK = 1 (Background)
-# WME_AC_VI = 2 (Video)
-# WME_AC_VO = 3 (Voice)
-arp_ac_category=0
-# Enable/Disable DTIM Synth
-# 1- Enable DTIM Synth
-# 0- Disable DTIM Synth
-gEnableLPRx=0
-
-#############################################
-# MAWC related configurations
-#############################################
-
-# MAWCEnabled - Enable/Disable Motion Aided Wireless Connectivity Global
-MAWCEnabled=0
-
-# mawc_roam_enabled - Enable/Disable MAWC during roaming
-mawc_roam_enabled=0
-
-# Enable/Disable the Motion Aided Wireless Connectivity
-# based NLO using this parameter
-mawc_nlo_enabled=0
-
-# Enable Packet filters before going into suspend
-# will clear those when resume
-# bit-0 : drop MAC multicast and IPv4 multicast
-# bit-1 : drop MAC unicast and IPv4 multicast
-# bit-2 : drop IPv4 broadcast
-# bit-3 : drop XID - Exchange station Identification packet
-# bit-4 : drop STP - Spanning Tree Protocol
-# bit-5 : drop DTP/LLC/CDP
-g_enable_packet_filter_bitmap=3
-
-#Enable host side recovery
-gEnableSelfRecovery=1
-
-#enable/disable FT open feature
-enable_ftopen=0
 
 END
 
